# kawkab

./: .gitignore  Cargo.toml  README.md  kawkab-project.txt
.github/workflows/: ci.yml
bridge/: Cargo.toml
bridge/src/: console.rs
core/: Cargo.toml  scratch.rs
core/src/: bytecode.rs  console.rs  error.rs  event_loop.rs  ffi.rs  http.rs  isolate.rs  lib.rs  main.rs  qjs_compat.rs  scheduler.rs  transpiler.rs  uring.rs
core/src/node/: buffer.rs  buffer_bootstrap.js  compat_contract_tests.rs  crypto.rs  esm_loader.rs  mod.rs  module_loader.rs  process.rs  runtime_policy.rs  web_platform_shim.js  web_platform_shim.rs  worker_threads.rs
docs/: COMPAT_DEFINITION_OF_DONE.md  COMPAT_KPI.md  EPICS_NODE_PARITY.md  FEATURE_BASELINE.md  INDEX.md  NODE_COMPATIBILITY.md  NODE_NON_GOALS.md  NPM_CORPUS.md  PRODUCT_VISION.md  RELEASE_CHECKLIST.md  ROADMAP_NODE_V23_MASTER.md  SPRINT_PLAN_Q1_Q2.md  WEEKLY_STATUS_TEMPLATE_NODE_PARITY.md
docs/data/: top100-packages.txt
fixtures/kpi/: README.md
fixtures/kpi/express-json/: package-lock.json  package.json  server.js
fixtures/kpi/express-minimal/: package-lock.json  package.json  probe-md-lf.js  server.js
fixtures/kpi/express-static/: package-lock.json  package.json  server.js
fixtures/kpi/express-static/public/: file.txt
fixtures/kpi/http-minimal/: package.json  server.js
fixtures/kpi/top100-qjs/: .gitignore  a.cjs  b.cjs  check-one.cjs  cs-proto.cjs  package-lock.json  package.json  req-mini.cjs  req-smokes.cjs  smokes-mini.cjs  smokes.cjs
fixtures/kpi/top100-sample/: check.js  package-lock.json  package.json
io/: Cargo.toml
io/src/: http.rs  lib.rs  uring.rs
kawkab/: Cargo.toml  build.rs
kawkab/src/: main.rs
pm/: Cargo.toml
pm/fixtures/: README.md
pm/src/: installer.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs  resolver.rs  scripts.rs  workspace.rs
scripts/: compat_smoke.sh  docs_consistency_check.sh  kpi_smoke.sh  pre_release_sanity.sh  runtime_perf_gate.sh  top100_node_matrix.sh  top100_qjs_matrix.sh
snapshot/: Cargo.toml
snapshot/src/: lib.rs
