[workspace]
resolver = "2"
members  = ["core", "io", "snapshot", "bridge", "kawkab", "pm"]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Kawkab Authors"]
license     = "MIT"

[workspace.dependencies]
quickjs-sys   = { package = "hirofa-quickjs-sys", version = "0.14.0" }
tokio         = { version = "1", features = ["full"] }
tokio-uring   = { version = "0.4" }
crossbeam-channel = "0.5"
mimalloc      = { version = "0.1", default-features = false }
httparse      = "1"
bytes         = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror     = "1"
anyhow        = "1"
parking_lot   = "0.12"
memmap2       = "0.9"
blake3        = "=1.5.4"
libc          = "0.2"
num_cpus      = "1.16"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
flate2        = "1"
tar           = "0.4"
semver        = "1"
dirs          = "5"
walkdir       = "2"
ring          = "0.16"
getrandom     = "0.2"
