[package]
name = "io"
version = "0.1.0"
edition = "2021"

[features]
default = []
tokio-uring = ["dep:tokio-uring"]

[dependencies]
tokio = { workspace = true }
tokio-uring = { workspace = true, optional = true }
bytes = { workspace = true }
httparse = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
