[package]
name = "pm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
